# photo-share-rest-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  notes.md  pyproject.toml
scripts/: cleanup-cron
src/config/: handlers.py  messages.py  middlewares.py  rate_limiters.py  settings.py
src/database/: db.py
src/entity/: __init__.py  comment.py  models.py  photo.py  photo_rating.py  user.py
src/helpers/: create_exception.py
src/migrations/: env.py
src/migrations/versions/: 18aa7d4a839f_init.py  1ff28033510d_init.py  2ce8a8368f37_add_user_session_model.py  30a58307d963_add_user_display_name.py  6f4000418871_add_rating_photo_model.py  8cdae135bd10_add_comment_model.py  a0017df77a24_add_unique_constraint_to_password_reset_.py  c8f5a1d2e347_make_common_timestamps_timezone_aware.py  d3600f952b46_init.py  e2a8f3a40bc1_add_photos_tags_transformation_photos.py
src/repository/: auth.py  comment.py  photo.py  photo_rating.py  user.py
src/routes/: auth.py  comment.py  photo.py  photo_rating.py  user.py
src/schemas/: auth.py  comment.py  photo.py  photo_rating.py  user.py
src/scripts/: cleanup_password_reset_tokens.py
src/services/: auth.py  comment.py  email.py  photo.py  redis_client.py  role.py  token_blacklist.py  user.py
src/services/templates/: reset_password.html  verify_email.html
src/shemas/: user.py
tests/: conftest.py
tests/integration/routes/: conftest.py  test_auth_routes.py  test_comment_routes.py  test_photo_rating_routes.py  test_photo_routes.py  (+1 more)
(+13 files in other folders)
